# pvgame

./: .clang-format  .gitignore  CMakeLists.txt  README.md  readme.txt
lib/: LIBRARIES
lib/dlmalloc/: dlmalloc.c  dlmalloc.h
lib/stb/: stb_image.h  stb_image_write.h
lib/tm/: tm_arrayview.h  tm_bin_packing.h  tm_conversion.h  tm_json.h  tm_print.h  tm_utility.h
src/: Camera.cpp  Collision.cpp  DebugSwitches.h  Entity.cpp  GameConstants.h  GameDeclarations.h  GameStl.h  Graphics.h  ImageData.h  Imgui.cpp  Inputs.cpp  JsonWriter.cpp  ParticleSystem.cpp  PhysicsHitTest.cpp  PlatformServicesHelpers.cpp  Profiling.cpp  Projectile.cpp  Projectile.h  Quad.cpp  QuadTexCoords.cpp  Room.cpp  Skeleton.cpp  Skeleton.h  TextureLoader.cpp  TextureMap.cpp  Utility.cpp  VirtualKeys.h  VoxelCollection.cpp  VoxelEditor.cpp  VoxelEditor.h  VoxelGrid.cpp  Warnings.h  build.bat  build_clang.bat  build_clang_sublime.bat  build_sublime.bat  clang_tidy.bat  clang_tidy_sublime.bat  easing.cpp  game.sln  (+10 more)
src/Core/: AABB.h  Algorithm.h  ArrayView.cpp  BitTwiddlings.h  Color.cpp  CoreAssert.h  CoreFloat.h  CoreTypes.h  DArray.h  FixedSizeAllocator.cpp  Hash.cpp  IntegerTypes.h  IntrusiveLinkedList.h  Log.h  Macros.h  Math.cpp  Math.h  Matrix.cpp  Matrix.h  MemoryWriter.cpp  Normal.cpp  NullableInt.h  NumericLimits.h  Range.h  Rect.h  Ring.h  ScopeGuard.h  StackAllocator.cpp  StlAlgorithm.h  String.cpp  StringView.cpp  Truncate.h  Unicode.cpp  Unicode.h  Vector.cpp  Vector.h
src/Editor/Animator/: Animator.cpp  Animator.h
src/Editor/Common/: DynamicVoxelCollection.cpp  DynamicVoxelCollection.h  EditorView.cpp  EditorView.h  MessageBox.cpp
src/Editor/Room/: RoomEditor.cpp  RoomEditor.h
src/Editor/TexturePack/: TexturePack.cpp  TexturePack.h
src/Graphics/: Font.h  ImageProcessing.cpp
src/Shaders/: scale_by_normal.vsh  single_color.fsh
src/platform/common/: WString.cpp  WString.h
src/platform/win32/: win32Filesystem.cpp  win32FontGeneration.cpp  win32PlatformServices.cpp  win32TextureLoader.cpp  win32_opengl.cpp  win32_opengl_shaders.cpp  win32main.cpp  win32malloc.cpp  win32malloc.h
